syntax = "proto3";
// import "google/protobuf/empty.proto";

package proto;
option go_package = "./";


message GetStatsResponse {
    int32 freeStorage = 1; // in bytes
}

message InitTransactionRequest {
    int64 fileSize = 1;
    int32 segmentsCount = 2;
    string fileHash = 3; // hex-encoded hash
    int64 bid = 4;
    int64 timeperiod = 5;
}

message InitTransactionResponse {
    string JWT = 1;
    int64 expiresAt = 2;
}

message Empty {

}

service StorageNode {
    rpc GetStats(Empty) returns (GetStatsResponse) {}
    rpc InitTransaction(InitTransactionRequest) returns (InitTransactionResponse) {}
}
